--- a/EDA_Project.ipynb
+++ b/EDA_Project.ipynb
@@ -11,7 +11,7 @@
         "3lAQfwXoJ6pB",
         "cTMfN3DYBHUw"
       ],
-      "authorship_tag": "ABX9TyOPWEeJkb9yCBWUXZPWJDF4",
+      "authorship_tag": "ABX9TyMMztnBjxQ62GA2aQSVoOo4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -109,9 +109,15 @@
         "\n",
         "**4. Who are the busiest host?**\n",
         "\n",
-        "**5. What other predictions we can have ?**\n",
+        "**5. What is the relation between number of reviews and minimum nights ?**\n",
         "\n",
-        "**6. What is the relation between variables ?**"
+        "**6. Which month has the most number of traffic ?**\n",
+        "\n",
+        "**7. Who are Hosts with most number of listings ?**\n",
+        "\n",
+        "**8. Who are the hosts with costliest listings ?**\n",
+        "\n",
+        "**9. What is the relation between variables ?**"
       ],
       "metadata": {
         "id": "eIclLrN5Jvq7"
@@ -1400,7 +1406,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 544
         },
         "id": "H3cfDKYL5lyy",
         "outputId": "0230ab5f-add4-48f8-d2c5-1223d925468a"
@@ -1475,7 +1481,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 423
         },
         "id": "tIAPF04xC7l4",
         "outputId": "c81f14cc-209c-49e4-eb1e-0e74fe1a9b2e"
@@ -1572,7 +1578,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 466
         },
         "id": "rlA2v26i-qLn",
         "outputId": "39d0493a-712b-435e-e89b-d5522b6750fc"
@@ -3855,7 +3861,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###**X. Pairplot :**"
+        "###**x. Pairplot :**"
       ],
       "metadata": {
         "id": "3mYDhMGSYl4b"
