--- a/airbnbEDA_Project.ipynb
+++ b/airbnbEDA_Project.ipynb
@@ -5,12 +5,9 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [
-        "UrU0DEY-BKoX",
-        "WBzMTF-81KED",
-        "3adUtx2z0DFR",
         "Kg83uV4S4NHZ"
       ],
-      "authorship_tag": "ABX9TyNxRwdYSwsrOHUwaOGff8fx",
+      "authorship_tag": "ABX9TyMK/4zsPP5Lo58wAn+qi8XQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -143,7 +140,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**The business objective is to increase the revenue and profit along helping the customers to have a home like experience while staying.**"
+        "**The business objective is to increase the revenue and profit as well as helping the customers to have a home like experience while staying.**"
       ],
       "metadata": {
         "id": "Q12f3d5C3xhx"
@@ -222,7 +219,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "id": "Zv6hKQCQR7s5"
       },
@@ -242,7 +239,7 @@
       "metadata": {
         "id": "zDOOPcBrH0Gr"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -257,7 +254,7 @@
         "id": "9obubgKQK2SL",
         "outputId": "56e18bb9-09aa-4b32-b2b3-af1ffd52633b"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -284,7 +281,7 @@
         "id": "5plGfcn6LCyS",
         "outputId": "0a87fe31-0bd5-4b41-9f22-6d4f7d5ad925"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -820,7 +817,7 @@
         "id": "duWUjF-sVbs5",
         "outputId": "ccfa8498-1c8f-4fe4-b771-f3211fbce959"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -919,7 +916,7 @@
         "id": "SiCoxP4INQAK",
         "outputId": "f31e67b5-db9d-480c-8da9-c3cf21e4ff32"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -965,7 +962,7 @@
         "id": "O5oLueHx25EG",
         "outputId": "f3de2b7c-a436-40eb-c44f-0c699069ac14"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1369,7 +1366,7 @@
         "id": "CkpGUI4BT220",
         "outputId": "e1fad386-d75c-4558-e444-7925f03b9ee2"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1411,7 +1408,7 @@
         "id": "v4-aSxFMt_sv",
         "outputId": "87d848fd-1599-477c-ce61-ba338075d702"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1434,7 +1431,7 @@
       "metadata": {
         "id": "I0_YFql6JhGV"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1451,7 +1448,7 @@
         "id": "AAzP1ByKbnF6",
         "outputId": "babf1fc7-1683-4dd2-f457-355cd63f8b6b"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1509,7 +1506,7 @@
         "id": "9fnptwWMG0I8",
         "outputId": "49e0d2a4-feba-4549-e7b3-e3c8d4310846"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1571,7 +1568,7 @@
         "id": "H3cfDKYL5lyy",
         "outputId": "ed9bc941-bcd6-41e4-a0e6-31fa39ea7f4c"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1608,7 +1605,7 @@
         "id": "26UedqxB-mRZ",
         "outputId": "d6618a36-ef8a-4139-f2b2-4c00d133b3e3"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1637,7 +1634,7 @@
         "id": "tIAPF04xC7l4",
         "outputId": "3579cdc5-629a-45b9-b69e-df0a810604bc"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1681,7 +1678,7 @@
         "id": "X4MTG8q-xn2d",
         "outputId": "d24fbdbd-2d0f-4bdb-fb8c-6c1f8df57cf9"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1728,7 +1725,7 @@
         "id": "rlA2v26i-qLn",
         "outputId": "b0a7d517-a0d1-425f-9d53-e32d025a284f"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1776,7 +1773,7 @@
         "id": "7GEZgSlURKPJ",
         "outputId": "26c404d5-24cb-464e-e97f-8384c675d800"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1811,7 +1808,7 @@
         "id": "YhAMDGfZ6E1L",
         "outputId": "3d97e22f-0cd8-4ac2-f935-ca783fa7fb8c"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1847,7 +1844,7 @@
         "id": "mQsvojlV5Z8N",
         "outputId": "605f4bc2-e594-4b07-f943-7901b3290e02"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1897,7 +1894,7 @@
         "id": "SpCFBvSD-w3e",
         "outputId": "a619ba37-ad1d-47c2-d275-b2627e9adc75"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1948,7 +1945,7 @@
         "id": "0qBLOD_-yox4",
         "outputId": "24faba9f-b9a7-4600-da25-8cf0153007ee"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1984,7 +1981,7 @@
         "id": "1IiJT0-5-sgE",
         "outputId": "0d238a3c-2d0b-42a1-c84c-835f64aedd56"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2316,7 +2313,7 @@
         "id": "7YeOOJJMFhws",
         "outputId": "6e786736-bea3-43f7-af6e-887a2fc02de6"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2371,7 +2368,7 @@
         "id": "FioLnS8Jg4Rr",
         "outputId": "432f9044-9b72-48e9-d356-cd7c225e69f4"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2435,7 +2432,7 @@
         "id": "jyfULmGp0b2T",
         "outputId": "6d5314f2-d574-45ac-b33b-222157b2504c"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2773,7 +2770,7 @@
         "id": "H62wLQ5d1xtY",
         "outputId": "312ebcfc-93f7-4055-bca8-164c21458d5b"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2820,7 +2817,7 @@
         "id": "zQxqiDtWUZqk",
         "outputId": "85e01636-1e24-4fcf-a0fb-8051c38a869c"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3200,7 +3197,7 @@
         "id": "VRF9vdLGqcOO",
         "outputId": "080c0d75-6f6e-41c0-c06c-759aa6eabf8c"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3560,7 +3557,7 @@
         "id": "3Lw9yaWLJbgb",
         "outputId": "3311cf51-001a-4469-c096-82fbae367217"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3608,7 +3605,7 @@
         "id": "ZJXsQq9Kibqe",
         "outputId": "99a812f8-3327-4f74-9403-f07ffee0fe50"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3990,7 +3987,7 @@
         "id": "-TsmYvbUY8q1",
         "outputId": "a28fc442-6fca-49a0-bb6e-14f3e61ed3db"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4037,7 +4034,7 @@
         "id": "m4OC9uGq9TP3",
         "outputId": "94cec714-ee1d-41d2-a5a6-954ac045d542"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
